overflow fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -148,7 +148,7 @@
     @apply bg-background text-foreground-secondary flex flex-col min-h-svh mt-0;
   }
   main {
-    @apply w-full flex flex-col max-w-screen-xl mx-auto;
+    @apply w-full flex flex-col max-w-screen-xl mx-auto overflow-x-hidden;
   }
   article {
     @apply flex px-4 sm:px-10 lg:px-25 flex-col space-y-27.5 lg:space-y-75 ;
